# moonlike_catkinws

./: .gitmodules  README.md
devel/include/multi_launch/: DeviceInfo.h  Extrinsics.h  GetBool.h  GetBoolRequest.h  GetBoolResponse.h  GetCameraInfo.h  GetCameraInfoRequest.h  GetCameraInfoResponse.h  GetCameraParams.h  GetCameraParamsRequest.h  GetCameraParamsResponse.h  GetDeviceInfo.h  GetDeviceInfoRequest.h  GetDeviceInfoResponse.h  GetInt32.h  GetInt32Request.h  GetInt32Response.h  GetString.h  GetStringRequest.h  GetStringResponse.h  IMUInfo.h  Metadata.h  SetBool.h  SetBoolRequest.h  SetBoolResponse.h  SetInt32.h  SetInt32Request.h  SetInt32Response.h  SetString.h  SetStringRequest.h  SetStringResponse.h  SpinnakerConfig.h
devel/include/multi_orbbec/: DeviceInfo.h  Extrinsics.h  GetBool.h  GetBoolRequest.h  GetBoolResponse.h  GetCameraInfo.h  GetCameraInfoRequest.h  GetCameraInfoResponse.h  GetCameraParams.h  GetCameraParamsRequest.h  GetCameraParamsResponse.h  GetDeviceInfo.h  GetDeviceInfoRequest.h  GetDeviceInfoResponse.h  GetInt32.h  GetInt32Request.h  GetInt32Response.h  GetString.h  GetStringRequest.h  GetStringResponse.h  IMUInfo.h  Metadata.h  SetBool.h  SetBoolRequest.h  SetBoolResponse.h  SetInt32.h  SetInt32Request.h  SetInt32Response.h  SetString.h  SetStringRequest.h  SetStringResponse.h
devel/include/orbbec_camera/: DeviceInfo.h  GetDeviceInfoResponse.h  IMUInfo.h
devel/include/spinnaker_camera_driver/: SpinnakerConfig.h
devel/lib/multi_launch/: camera_node  list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node  spinnaker_test_node
devel/lib/multi_orbbec/: list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node
devel/lib/natnet_ros_cpp/: marker_poses_server  natnet_ros_cpp
devel/lib/orbbec_camera/: list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node
devel/lib/pcl_processing/: pcl_processing_node
devel/lib/pkgconfig/: data_to_s3.pc  flir_camera_description.pc  multi_launch.pc  multi_orbbec.pc  natnet_ros_cpp.pc  odometry_pose.pc  orbbec_camera.pc  pcl_processing.pc  pcl_registration.pc  pcl_registration_process.pc  save_files.pc  spinnaker_camera_driver.pc  time_stamp.pc
devel/lib/python3/dist-packages/multi_launch/cfg/: SpinnakerConfig.py
devel/lib/python3/dist-packages/multi_launch/msg/: _DeviceInfo.py  _Extrinsics.py  _IMUInfo.py  _Metadata.py
devel/lib/python3/dist-packages/multi_launch/srv/: _GetBool.py  _GetCameraInfo.py  _GetCameraParams.py  _GetDeviceInfo.py  _GetInt32.py  _GetString.py  _SetBool.py  _SetInt32.py  _SetString.py
devel/lib/python3/dist-packages/multi_orbbec/msg/: _DeviceInfo.py  _Extrinsics.py  _IMUInfo.py  _Metadata.py
devel/lib/python3/dist-packages/multi_orbbec/srv/: _GetBool.py  _GetCameraInfo.py  _GetCameraParams.py  _GetDeviceInfo.py  _GetInt32.py  _GetString.py  _SetBool.py  _SetInt32.py  _SetString.py
devel/lib/python3/dist-packages/spinnaker_camera_driver/cfg/: SpinnakerConfig.py
devel/lib/spinnaker_camera_driver/: camera_node  spinnaker_test_node
devel/share/common-lisp/ros/multi_launch/msg/: DeviceInfo.lisp  Extrinsics.lisp  IMUInfo.lisp  Metadata.lisp  _package.lisp  _package_DeviceInfo.lisp  _package_Extrinsics.lisp  _package_IMUInfo.lisp  _package_Metadata.lisp  multi_launch-msg.asd
devel/share/common-lisp/ros/multi_launch/srv/: GetBool.lisp  GetCameraInfo.lisp  GetCameraParams.lisp  GetDeviceInfo.lisp  GetInt32.lisp  GetString.lisp  SetBool.lisp  SetInt32.lisp  SetString.lisp  _package.lisp  _package_GetCameraInfo.lisp  _package_GetCameraParams.lisp  _package_GetInt32.lisp  multi_launch-srv.asd
devel/share/common-lisp/ros/multi_orbbec/msg/: DeviceInfo.lisp  Extrinsics.lisp  IMUInfo.lisp  Metadata.lisp  _package.lisp  _package_DeviceInfo.lisp  _package_Extrinsics.lisp  _package_IMUInfo.lisp  _package_Metadata.lisp  multi_orbbec-msg.asd
devel/share/common-lisp/ros/multi_orbbec/srv/: GetBool.lisp  GetCameraInfo.lisp  GetCameraParams.lisp  GetDeviceInfo.lisp  GetInt32.lisp  GetString.lisp  SetBool.lisp  SetInt32.lisp  SetString.lisp  (+5 more)
devel/share/data_to_s3/cmake/: data_to_s3Config.cmake
devel/share/flir_camera_description/cmake/: flir_camera_descriptionConfig.cmake
devel/share/multi_launch/cmake/: multi_launch-msg-extras.cmake  multi_launch-msg-paths.cmake  multi_launchConfig.cmake
devel/share/multi_orbbec/cmake/: multi_orbbec-msg-paths.cmake  multi_orbbecConfig.cmake
devel/share/natnet_ros_cpp/cmake/: natnet_ros_cppConfig.cmake
devel/share/odometry_pose/cmake/: odometry_poseConfig.cmake
devel/share/orbbec_camera/cmake/: orbbec_camera-msg-extras.cmake  orbbec_camera-msg-paths.cmake  orbbec_cameraConfig.cmake
devel/share/pcl_processing/cmake/: pcl_processingConfig.cmake
devel/share/pcl_registration/cmake/: pcl_registrationConfig.cmake
devel/share/pcl_registration_process/cmake/: pcl_registration_processConfig.cmake
devel/share/roseus/ros/multi_launch/: manifest.l
devel/share/roseus/ros/multi_orbbec/: manifest.l
devel/share/roseus/ros/natnet_ros_cpp/: manifest.l
devel/share/roseus/ros/orbbec_camera/: manifest.l
devel/share/save_files/cmake/: save_filesConfig.cmake
devel/share/spinnaker_camera_driver/cmake/: spinnaker_camera_driverConfig.cmake
devel/share/time_stamp/cmake/: time_stampConfig.cmake
src/data_to_s3/: CMakeLists.txt  package.xml
src/data_to_s3/scripts/: data_to_s3_node.py
src/multi_launch/: CMakeLists.txt
src/multi_launch/include/spinnaker_camera_driver/: SpinnakerCamera.h
src/multi_launch/launch/: OMNIMAN.launch  camera.launch  gemini2.launch  gemini2L.launch  multi_camera.launch
src/multi_launch/src/: nodelet.cpp
src/odometry_pose/: CMakeLists.txt  package.xml
src/odometry_pose/scripts/: odometry_pose_node.py
src/pcl_processing/: CMakeLists.txt
src/pcl_processing/src/: pcl_processing_node.cpp
src/pcl_registration/scripts/: pcl_registration_node.py
src/save_files/: CMakeLists.txt
src/save_files/scripts/: save_files_node.py
src/time_stamp/: CMakeLists.txt
src/time_stamp/scripts/: time_stamp_node.py
(+54 files in other folders)
